data/forge_javadoc/1.7.10/processed/net_minecraft_client_resources_ResourcePackListEntry.md
# ResourcePackListEntry

**Inheritance:** java.lang.Object → net.minecraft.client.resources.ResourcePackListEntry

## Class signature

```java
public abstract class ResourcePackListEntry extends java.lang.Object implements GuiListExtended.IGuiListEntry
```

## Constructors

- `ResourcePackListEntry(GuiScreenResourcePacks p_i45051_1_)`

## Methods

- `void drawEntry(int p_148279_1_, int p_148279_2_, int p_148279_3_, int p_148279_4_, int p_148279_5_, Tessellator p_148279_6_, int p_148279_7_, int p_148279_8_, boolean p_148279_9_)`
- `protected boolean func_148307_h()`
- `protected boolean func_148308_f()`
- `protected boolean func_148309_e()`
- `protected boolean func_148310_d()`
- `protected abstract java.lang.String func_148311_a()`
- `protected abstract java.lang.String func_148312_b()`
- `protected abstract void func_148313_c()`
- `protected boolean func_148314_g()`
- `boolean mousePressed(int p_148278_1_, int p_148278_2_, int p_148278_3_, int p_148278_4_, int p_148278_5_, int p_148278_6_)`
- `void mouseReleased(int p_148277_1_, int p_148277_2_, int p_148277_3_, int p_148277_4_, int p_148277_5_, int p_148277_6_)`

## Fields

- `protected GuiScreenResourcePacks field_148315_b`
- `protected Minecraft field_148317_a`